<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MediaControlApp</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="center_button"></string>
    <string name="right_button"></string>
    <string name="left_button"></string>
    <string name="touch_pannel"></string>
    <string name="scroll_panel"></string>

</resources>
