<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".MainActivity" >


    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.

    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.88"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/touch_pane"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.94"
                android:text="@string/touch_pannel" />

            <Button
                android:id="@+id/scroll_pane"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:text="@string/scroll_panel" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/left_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/left_button" />

            <Button
                android:id="@+id/center_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_button" />

            <Button
                android:id="@+id/right_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right_button" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
